# Rust-Server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rest.http
migrations/: 20250120080800_blogs.down.sql  20250120080800_blogs.up.sql
src/: main.rs
src/db/: connection.rs
src/middleware/: jwt_middleware.rs
src/models/: blog_model.rs  error.rs  jwt_model.rs  mod.rs  user.rs
src/services/: blog_service.rs  mod.rs  user_service.rs
src/utils/: files.rs  jwt.rs  mod.rs  pass_hash.rs
