[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217",features = ["derive"] }
log = "0.4.25"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }  
chrono = { version = "0.4.39", features = ["serde"] } 
tokio = { version = "1.43.0", features = ["full"] }
sanitize-filename = "0.6.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
actix-files = "0.6.6"
serde_json = "1.0.138"
